handel error in split file

--- a/todo
+++ b/todo
@@ -22,3 +22,9 @@ setup default error pages
 
 todo:
 	simple static server
+
+////////////////////////////////////////////////////////////////////
+
+if method = Get => ignore the body
+handel transfer encoding = chunked
+add client_max_body_size 10M
