--- a/todo
+++ b/todo
@@ -1,14 +1,14 @@
-nginx HTTP 1.1
-status code
-default error pages
++ nginx HTTP 1.1
++ status code
++ default error pages
 fork only allowed for cgi
 static website
 upload file support
-methods: GET POST DELETE
++ methods: GET POST DELETE
 ddos immune
-multiple port support
-config:
-port host
++ multiple port support
++ config:
++ port host
 server_names (domain)
 the first server is the default if none other matches
 setup default error pages
@@ -25,17 +25,8 @@ todo:
 
 ////////////////////////////////////////////////////////////////////
 
-=> if method = Get => ignore the body
-=> handel transfer encoding = chunked 
-=> add client_max_body_size 10M
-=> if file binary not work with content string
 => add "upload_path path_dir" in config file
 => if i have two same host => "Assertion failed: (bind(sock, (struct sockaddr *)&address, sizeof(address)) == 0), function spawn_servers, file main.cpp, line 34."
 "[1]    10020 abort      ./webserv webserv.conf "
 
 ////////////////////////////////////////////////////////////////////
-
-
-cleanup main
-request mpx
-response mpx
