--- a/todo
+++ b/todo
@@ -24,9 +24,7 @@ todo:
 	simple static server
 
 ////////////////////////////////////////////////////////////////////
-
-=> add "upload_path path_dir" in config file
-=> if i have two same host => "Assertion failed: (bind(sock, (struct sockaddr *)&address, sizeof(address)) == 0), function spawn_servers, file main.cpp, line 34."
-"[1]    10020 abort      ./webserv webserv.conf "
-
-////////////////////////////////////////////////////////////////////
+form data: upload files
+cgi
+multiplixing
+finished = send_response(fd, request, response, status_code, &close);
