--- a/todo.txt
+++ b/todo.txt
@@ -32,6 +32,11 @@ form data: upload files
 => when return have a big file program exit
 => send me the extention of file to be posted
 => check if the extention cgi is php or py
+=> uplod : in case of text shod parsed the content :
+    "----------------------------178924003759668761592596
+    Content-Disposition: form-data; name="text"
+    nbvc nv
+    ----------------------------178924003759668761592596--"
 
 ////////////////////////////////////////////////////////////////////
 handel if i don't have / in the end of "dir: /Users/kadjane/Desktop/server_3"
@@ -39,12 +44,21 @@ open not work 500
 #autoindex ..
 infinit redirection in => /Users/kadjane/Desktop/web_serv2/srcs/book.pdf
 add fonction delete file created
+if / not exist path == server route
 
 
-cgi:
   => check extention => done
   => execute script => done
   => parse file => done
   => send response => done
-  => parce query string replace %20 %2B + by " "
+  => parce query string replace %20 %2B + by " " => done
+  => handel py script => done 
+  => handel infinit loop => done
+  => handel cgi in diractory => done
+
+  => handel cookies
+  => handel / in the end (dir: /Users/kadjane/Desktop/server_4/)
+  => generate the content_dir.html just when i have autoindex
+  => check all and clean the code
   => protection for the functions
+  => handel / in the post
