--- a/todo.txt
+++ b/todo.txt
@@ -66,7 +66,7 @@ if / not exist path == server route
   => check all and clean the code
   => protection for the functions
   => handel / in the post
-
+/Users/kadjane/Desktop/server_push/
 
 exit@GLIBC_2.2.5
 inet_addr@GLIBC_2.2.5
