--- a/todo.txt
+++ b/todo.txt
@@ -37,7 +37,8 @@ form data: upload files
   => handel / in the post
 	=> check if the socket would block in send side
 => / not exist => done 
-when a file is uploaded it is deleted
+=> when a file is uploaded it is deleted
+=> send = 0
 
 exit@GLIBC_2.2.5
 inet_addr@GLIBC_2.2.5
@@ -58,8 +59,6 @@ strtol
 unlink@GLIBC_2.2.5
 
 
-on send check for 0 sent
-http/1.1 not defaulting to closing connection
 is it possible to serve short requests in one iteration
 
 TOTEST:
