--- a/todo.txt
+++ b/todo.txt
@@ -32,16 +32,10 @@ form data: upload files
   => handel infinit loop 
 
 
-  => check all and clean the code
-  => protection for the functions
-  => handel / in the post
-	=> check if the socket would block in send side
-=> / not exist => done 
-=> when a file is uploaded it is deleted
-=> send = 0
-
-abort of sanitize
-
+	=> rewrite
+	=> check open 
+  	=> check all and clean the code
+ 	=> protection for the functions
 
 exit@GLIBC_2.2.5
 inet_addr@GLIBC_2.2.5
@@ -55,14 +49,12 @@ perror@GLIBC_2.2.5
 remove@GLIBC_2.2.5
 rename@GLIBC_2.2.5
 stat
-=> strcmp
+strcmp
 strcpy
 strlen
 strtol
 unlink@GLIBC_2.2.5
 
-default error pages are required
-khawla => fix config dir not ending with / leads to 302
 
 is it possible to serve short requests in one iteration
 
@@ -96,5 +88,7 @@ test cookie system
 
 multiple cgi's
 
-=> upload text
+=> config
+	=> mathod not exist program hung
+	=>
 
